TerraformVariables/a-Origins/publicSubnet.tf
resource "aws_subnet" "myPublicSubnet" {
  vpc_id = aws_vpc.myVPC.id 
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  tags = {
    Name = "myPublicSubnet"
  }
}
